<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:paddingVertical="60dp"
        android:text="@string/logo"
        android:textColor="@color/greenspace"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="35sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/strapnote"
        android:textColor="@color/greenspace"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="italic"
        android:layout_marginBottom="200dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="@color/greenspace"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:layout_marginHorizontal="30dp"
        android:autofillHints="emailAddress"
        android:hint="@string/email_hint"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="30dp"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="20sp"
        android:textColor="@color/greenspace"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="48dp"
        android:layout_marginHorizontal="30dp"
        android:hint="@string/passwordhere"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/button_bg"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>